// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<div
  className="sc-bdVaJa iLLxmY"
>
  <button
    className="sc-htoDjs sc-VigVT dzpHnm sc-gqjmRU hdWNYH"
  >
    Click me
  </button>
</div>
`;

exports[`Styled Anchor Button renders correctly 1`] = `
<div
  className="sc-bdVaJa iLLxmY"
>
  <a
    className="sc-htoDjs sc-jTzLTM fBIESj sc-gqjmRU hdWNYH"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Styled Button renders correctly 1`] = `
<div
  className="sc-bdVaJa iLLxmY"
>
  <button
    className="sc-htoDjs sc-VigVT dJfJRg sc-gqjmRU hdWNYH"
  >
    Click me
  </button>
</div>
`;
